--- a/package.json
+++ b/package.json
@@ -1,9 +1,19 @@
 {
   "name": "web-dev-env",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "website development environment.",
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cswleocsw/web-dev-env"
+  },
+  "author": "Leo Chen",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/cswleocsw/web-dev-env/issues"
   },
   "devDependencies": {
     "browser-sync": "^2.9.3",
