--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "gh-pages": "^0.4.0",
     "git-rev-sync": "^1.4.0",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.0.2",
     "gulp-compass": "^2.1.0",
     "gulp-jade": "^1.1.0",
     "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
     "imagemin": "^3.2.0",
+    "lodash": "^3.10.1",
     "object-assign": "^4.0.1",
     "rimraf": "^2.4.3",
     "run-sequence": "^1.1.3",
