--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "website development environment.",
   "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
     "url": "https://github.com/cswleocsw/web-dev-env/issues"
   },
   "devDependencies": {
-    "browser-sync": "^2.10.1",
+    "browser-sync": "^2.11.0",
     "browser-sync-spa": "^1.0.3",
     "bs-html-injector": "^3.0.0",
     "express": "^4.13.3",
@@ -29,8 +29,8 @@
     "gulp-util": "^3.0.7",
     "lodash": "^3.10.1",
     "object-assign": "^4.0.1",
-    "rimraf": "^2.4.4",
+    "rimraf": "^2.5.0",
     "run-sequence": "^1.1.5",
-    "webpack": "^1.12.9"
+    "webpack": "^1.12.11"
   }
 }
