--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "web-dev-env",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "website development environment.",
-  "main": "src/app.js",
+  "main": "src/js/index.js",
   "scripts": {
-    "start": "gulp"
+    "bs": "browser-sync start --server build --no-open",
+    "build": "npm run clean && npm run static && npm run jade && npm run build:js && npm run build:css",
+    "build:js": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js --progress --colors",
+    "build:css": "node-sass ./src/css -o ./build/css --output-stype compressed",
+    "clean": "rimraf ./build/*",
+    "dev:js": "cross-env NODE_ENV=development webpack --config webpack.config.dev.js --progress --colors --watch",
+    "dev:css": "node-sass ./src/css -o ./build/css --output-stype compressed -w",
+    "jade": "jade ./src -o ./build -P",
+    "static": "cp -r ./src/img ./build"
   },
   "repository": {
     "type": "git",
@@ -16,21 +24,17 @@
     "url": "https://github.com/cswleocsw/web-dev-env/issues"
   },
   "devDependencies": {
-    "browser-sync": "^2.11.0",
-    "browser-sync-spa": "^1.0.3",
-    "bs-html-injector": "^3.0.0",
-    "express": "^4.13.3",
-    "gh-pages": "^0.8.0",
-    "git-rev-sync": "^1.4.0",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-compass": "^2.1.0",
-    "gulp-jade": "^1.1.0",
-    "gulp-util": "^3.0.7",
-    "lodash": "^3.10.1",
-    "object-assign": "^4.0.1",
-    "rimraf": "^2.5.0",
-    "run-sequence": "^1.1.5",
-    "webpack": "^1.12.11"
+    "babel-core": "^6.7.2",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "cross-env": "^1.0.7",
+    "jade": "^1.11.0",
+    "lodash": "^4.6.1",
+    "node-sass": "^3.4.2",
+    "rimraf": "^2.5.2",
+    "webpack": "^1.12.14"
   }
 }
